--- a/streamlit_app/backend/pyproject.toml
+++ b/streamlit_app/backend/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.9"
 license = { text = "MIT" }
 authors = [
-    { name = "Your Name", email = "your.email@example.com" }
+    { name = "Your Name", email = "sakethram9999@example.com" }
 ]
 dependencies = [
     "fastapi>=0.95.0",
