--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ motor==3.7.0
 pydantic==2.10.0
 pydantic-settings==2.8.0
 python-dotenv==1.0.0
-torch==2.0.1
+torch>=2.0.1
 numpy==1.25.2
 scikit-learn==1.3.0
 streamlit==1.30.0
