--- a/vercel.json
+++ b/vercel.json
@@ -2,20 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "backend/index.py",
+        "src": "api/index.py",
         "use": "@vercel/python"
       }
     ],
     "routes": [
       {
-        "handle": "filesystem"
-      },
-      {
         "src": "/(.*)",
-        "dest": "backend/index.py"
+        "dest": "api/index.py"
       }
-    ],
-    "env": {
-      "APP_MODULE": "backend.index:app"
-    }
+    ]
   }
