--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,12 @@ fastapi==0.115.11
 uvicorn==0.34.0
 pydantic==2.10.6
 starlette==0.46.1
-numpy==2.2.3
-torch==2.6.0
-scikit-learn==1.6.1
 python-dotenv==1.0.1
 motor==3.7.0
 pymongo==4.11.2
 dnspython==2.7.0
 pydantic-settings==2.8.1
+torch==2.6.0
+numpy==2.2.3
+scikit-learn==1.6.1
+requests==2.32.3
